web/static/css/style.css
:root {
    --font-size-h1: 20px;
    --font-size-h2: 18px;
    --font-size-h3: 16px;
    --font-size-h4: 14px;
    --font-size-h5: 12px;
}

.theme-light {
	--color-primary: #fff;
	--color-primary-dark: #808080;
	--color-accent: blue;
	--color-secondary: purple;
	--text-color-primary: #000;
	--text-color-secondary: #aaa;
	--text-color-url: purple;
	--text-color-accent: blue;
	--text-color-secondary: #000;
}

.theme-dark {
	--color-primary: #121212;
	--color-primary-dark: #808080;
	--color-accent: blue;
	--color-secondary: purple;
	--text-color-primary: #aaa;
	--text-color-secondary: #e7e7e7;
	--text-color-url: #aaa;
	--text-color-accent: #e7e7e7;
}

h1 { font-size: var(--font-size-h1); }
h2 { font-size: var(--font-size-h2); }
h3 { font-size: var(--font-size-h3); }
h4 { font-size: var(--font-size-h4); }
h5 { font-size: var(--font-size-h5); }

img {
	margin: auto;
	width: 100%;
	display: block;
}

body {
	background-color: var(--color-primary);
	color: var(--text-color-primary);
    margin: 0 auto;
    max-width: 60em;
    padding: 0 25px;
}

.header {
	top: 0;
	padding-top: 50px;
	padding-bottom: 70px;
}

.header h1 {
	float: left;
}

.header h2 {
	float: right;
	display: inline;
}

.content h1 {
	padding-top: 40px;
	line-height: 1.8;
}

.content h2 {
	padding-top: 40px;
	line-height: 1.8;
}

.content h3 {
    line-height: 1.5;
}

#read-more {
	line-height: 0.2;
	font-size: var(--font-size-h4);
}

.publication-date {
	color: var(--color-primary-dark);
	font-size: var(--font-size-h4);
	margin-left: 4px;
}

.content p {
    font-size: var(--font-size-h4);
	color: var(--text-color-secondary);
	margin: 0 0 1.75rem;
	line-height: 1.6;
}

.footer {
   bottom: 0;
   margin-top: 250px;
   margin-bottom: 25px;
   text-align: center;
   font-size: var(--font-size-h5);
   color: var(--text-color-secondary);
   line-height: 1.6;
}

a {
	cursor: pointer;
	color: var(--text-color-accent);
	text-decoration: none;
	border-bottom: 1px solid blue
}

a:visited {
	color: var(--text-color-url);
	border-bottom: 1px solid purple
}

a:hover {
	background-color: blue;
	color: #fff;
}

a:hover:visited {
	background-color: blue;
	color: white;
}

#header-terminal-cmd {
	color: var(--color-primary-dark);
	max-width: 30%;
	white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.header a:visited {
	color: var(--text-color-accent);
	border-bottom: none;
}

.header a {
	border-bottom: none;
}

.header a:hover:visited {
	color: white;
	background-color: var(--color-accent);
	border-bottom: none;
}

.transparent-span {
    color: var(--color-primary);
}

pre {
  margin: 0;
  padding: 0;
  margin 0 0;
  background-color: var(--color-primary);
  border: 1px solid #ccc;
  white-space: pre;
}

code[class*="language-"], pre[class*="language-"], pre code {
    margin: 0 0;
}

code {
  display: block;
  font-family: Consolas, Monaco, monospace;
  font-size: 10pt;
  overflow-x: auto;
  padding: 0.5em;
  scrollbar-width: thin;
  -moz-tab-size: 4;
  tab-size: 4;
}

pre code.hljs {
  padding: 16px 30px 20px;
}

